--- a/coc-settings.json
+++ b/coc-settings.json
@@ -18,7 +18,17 @@
       "initializationOptions": {
          "cache": {
            "directory": "/tmp/ccls"
-         }
+         },
+         "clang": {
+           // make sure you have installed commandLineTools
+          "resourceDir": "/Library/Developer/CommandLineTools/usr/lib/clang/10.0.1",
+          "extraArgs": [
+            "-isystem",
+            "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1",
+            "-I",
+            "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/"
+          ]
+        }
        }
     }
   }
