--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,6 +3,7 @@
         "golang": {
             "command": "gopls",
             "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+            "trace.server": "verbose",
             "filetypes": ["go"]
         },
         "bash": {
