--- a/coc-settings.json
+++ b/coc-settings.json
@@ -12,25 +12,11 @@
             "filetypes": ["sh"],
             "ignoredRootPaths": ["~"]
         },
-        "ccls": {
-            "command": "ccls",
-            "filetypes": ["c", "cpp", "objc", "objcpp"],
-            "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-            "initializationOptions": {
-                "cache": {
-                    "directory": "/tmp/ccls"
-                },
-                "clang": {
-                    // make sure you have installed commandLineTools
-                    "resourceDir": "/Library/Developer/CommandLineTools/usr/lib/clang/10.0.1",
-                    "extraArgs": [
-                        "-isystem",
-                        "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1",
-                        "-I",
-                        "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/"
-                    ]
-                }
-            }
+        "clangd": {
+            "command": "clangd",
+            "args": ["--background-index"],
+            "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+            "filetypes": ["c", "cpp", "objc", "objcpp"]
         },
         "python": {
             "command": "python",
