--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,7 +2,7 @@
     "languageserver": {
         "golang": {
             "command": "gopls",
-            "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+            "rootPatterns": ["go.mod"],
             "trace.server": "verbose",
             "filetypes": ["go"]
         },
